# rust_seo

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
db/in/: config.json
db/input/: input.toml  url.toml
db/output/: test.toml
diagnostic/: diagnostic.drawio
output/: response.json
src/: commands.rs  comparison.rs  connect.rs  gui.rs  html.rs  input.rs  json.rs  json_system.rs  macros.rs  main.rs  mod.rs  search.rs  seo.rs  test.rs  tools.rs
src/tools/: connect.rs  forming.rs  search.rs  serialization.rs
