[package]
name = "rust_seo"
version = "0.0.0"
edition = "2021"

[dependencies]
#シリアライズ/デシリアライズ
serde = { version = "*", features = ["derive"] }
serde_json = { version = "*" }
#HTTPクライアント
reqwest = { version = "*", features = ["blocking"] }
#非同期処理
tokio = { version = "*", features = ["full"] }
futures = "*"
#guiクレート
eframe = { version = "*", features = ["default"] }
#現在時刻の取得
chrono = "*"

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3
